fixed spacing and tried ajusting anchor tags

--- a/css/menu.scss
+++ b/css/menu.scss
@@ -37,11 +37,9 @@ h1{
     }
 }
 .headingblock{
-    a{
     font-family: $bigfont;
     color: $red;
     font-size: 2.5rem;
-    }
 }
 .largecontainer{
     display: grid;
@@ -98,6 +96,12 @@ footer{
         a{
             margin-left: 3vw;
             margin-right: 3vw;
+        }
+    .headingblock{
+        font-family: $bigfont;
+        color: $red;
+        font-size: 2.5rem;
+        background-color: $green;
         }
     }
     .largecontainer{
